# devtidy

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: cache.rs  delete.rs  export.rs  mod.rs  permissions.rs  rename.rs  scan.rs  settings.rs  shell.rs
src-tauri/src/db/: cache.rs  mod.rs  settings.rs
src-tauri/src/scanner/: detector.rs  mod.rs  sizer.rs  walker.rs
src/components/: app-shell.tsx  theme-toggle.test.tsx  theme-toggle.tsx
src/components/dashboard/: size-ranking.tsx  stat-cards.tsx  type-chart.tsx
src/components/env-table/: batch-delete-dialog.tsx  columns.tsx  delete-dialog.tsx  env-table.tsx  rename-dialog.tsx
src/components/settings/: settings-page.tsx
src/components/ui/: checkbox.tsx  dialog.tsx
src/hooks/: use-delete-env.ts  use-scan.ts  use-settings.ts  use-theme.test.tsx  use-theme.ts  use-theme.tsx  use-updater.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  ja.json  ko.json  zh-CN.json  zh-TW.json
src/lib/: format.test.ts  format.ts
src/types/: scan.ts
