[package]
name = "app"
version = "0.1.0"
description = "DevTidy — Virtual environment manager for Python venv and Node.js node_modules"
authors = ["ethan-tsai-tsai"]
license = "MIT"
repository = "https://github.com/ethan-tsai-tsai/devtidy"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
jwalk = "0.8"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
trash = "5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
